--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "typescript": "^3.7.2"
   },
   "dependencies": {
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "tslint": "^5.20.1"
   }
 }
