--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "@types/jest": "^24.0.23",
     "jest": "^24.9.0",
     "ts-jest": "^24.2.0",
+    "tslint": "^5.20.1",
     "typescript": "^3.7.2"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "tslint": "^5.20.1"
+    "axios": "^0.19.0"
   }
 }
